<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" translatable="false">VIO</string>
    <string name="title_today">today</string>
    <string name="title_calendar">the calendar</string>
    <string name="title_advices">tips</string>
    <string name="title_more">more</string>
    <string name="change_language">change language</string>
    <string name="title_notification_settings">напоминания</string>
    <string name="notification_question_0">Месячные через пару дней</string>
    <string name="notification_question_1">Окончание месячных</string>
    <string name="notification_question_2">Начало месячных</string>
    <string name="notification_question_3">Овуляция</string>
    <string name="accept_all">accept all</string>
    <string name="next">further</string>
    <string name="info_restart_application">перезагрузите приложение, чтобы изменения вступило в силу</string>
    <string name="skip">skip</string>
    <string name="pass">password</string>
    <string name="email">e-mail</string>
    <string name="error_email">not valid e-mail</string>
    <string name="error_pass">not valid pass</string>
    <string name="description_login">enter your e-mail and password</string>
    <string name="choose_date">Select the first day of your period</string>
    <string-array name="license_menu">
        <item>@string/license_checkbox_0</item>
        <item>@string/license_checkbox_1</item>
        <item>@string/license_checkbox_2</item>
        <item>@string/license_checkbox_3</item>
    </string-array>
    <string name="license_comment">
        *You can withdraw your consent at any time by writing in example@rtrd.hert
    </string>
    <string name="license_checkbox_0">I agree to
        <a href="https://google.com">Privacy Policy</a>
        and
        <a href="https://google.com">Terms of Use</a>
    </string>
    <string name="license_checkbox_1">
        I agree to the processing of personal health data for application functioning. Find out more
        in the
        <a href="https://google.com">Privacy Policy</a>
    </string>
    <string name="license_checkbox_2">I consent to the use of my
        <a href='https://google.com'>personal information</a>
        including partner recommendations**
    </string>
    <string name="license_checkbox_3">
        I consent to making my personal information available to appflayer and its integrated partners for the purpose
        of expanding the audience and promoting the app*
    </string>
    <string name="new_user_question_0">When did your last period begin?</string>
    <string name="new_user_question_1">What is the average duration of your period?</string>
    <string name="new_user_question_2">What is the average duration of your cycle?</string>
    <string name="new_user_question_3">What’s your year of birth?</string>
    <string name="pregnant_question">Which week of pregnancy are you in currently?</string>
    <string name="average_length_cycle">average length cycle</string>
    <string name="jan">January</string>
    <string name="feb">February</string>
    <string name="mar">March</string>
    <string name="apr">April</string>
    <string name="may">May</string>
    <string name="jun">June</string>
    <string name="jul">July</string>
    <string name="aug">August</string>
    <string name="sep">September</string>
    <string name="oct">October</string>
    <string name="nov">November</string>
    <string name="dec">December</string>
    <string name="mon">Monday</string>
    <string name="tue">Tuesday</string>
    <string name="wed">Wednesday</string>
    <string name="thu">Thursday</string>
    <string name="fri">Friday</string>
    <string name="sat">Saturday</string>
    <string name="sun">Sunday</string>
    <string name="check_menstrual" translatable="false">отметить месячные</string>
    <string name="delete_menstrual" translatable="false">удалить месячные</string>
    <string name="week">a week</string>
    <string name="month">month</string>
    <string name="year">year</string>
    <string name="butt_menstrual_days">mark monthly</string>
    <string name="next_cycle">soon</string>
    <string name="ovulation">ovulation</string>
    <string name="tip_today_new">easier to get pregnant</string>
    <string name="tip_today_old">there is a chance to get pregnant</string>
    <string name="menstrual">monthly</string>
    <string name="length_cycle">cycle length</string>
    <string name="length_menstrual_cycle">monthly length</string>
    <string name="tip_pref_0">Initially, Vio makes predictions based on the cycle and menstruation length entered here;
        by regularly entering info on your periods, you will enable the application to build forecasts based on this
        info
    </string>
    <string name="forgot">I do not remember</string>
    <string name="tip_pref_1">If you disable this option, you will only see the day of ovulation, without indication of
        the probability of getting pregnant
    </string>
    <string-array name="more_menu">
        <item>@string/cycle_settings</item>
        <item>@string/change_language</item>
        <item>@string/title_notification_settings</item>
    </string-array>
    <string name="more_title">больше</string>
    <string name="cycle_settings">цикл и овуляция</string>
    <string name="probability_pregnant">вероятность забеременнеть</string>
    <string name="cycle_length">длина цикла</string>
    <string name="menstrual_length">длина месячных</string>
    <string name="cycle_sett_info">Изначально VIO делает прогнозы по введённым здесь данным</string>
    <string name="chance_get_pregnant">chance to get pregnant</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="jant">января</string>
    <string name="febt">февраля</string>
    <string name="mart">марта</string>
    <string name="aprt">апреля</string>
    <string name="mayt">мая</string>
    <string name="junt">июня</string>
    <string name="jult">июля</string>
    <string name="augt">августа</string>
    <string name="sept">сентября</string>
    <string name="octt">октября</string>
    <string name="novt">ноября</string>
    <string name="dect">декабря</string>
    <string name="facebook_app_id" translatable="false">988568198018105</string>
    <string name="day" tools:ignore="MissingTranslation">день</string>
    <string name="menuitem_help">Help</string>
    <string name="menuitem_about">About …</string>
    <string name="current_day">Current day</string>
    <string name="menuitem_list">List</string>
    <string name="menuitem_listdetails">List with details</string>
    <string name="menuitem_copy">Backup</string>
    <string name="menuitem_restore">Restore</string>
    <string name="menuitem_options">Preferences</string>
    <string name="menuitem_exit">Exit</string>
    <string name="main_calday_su">SU</string>
    <string name="main_calday_mo">MO</string>
    <string name="main_calday_tu">TU</string>
    <string name="main_calday_we">WE</string>
    <string name="main_calday_th">TH</string>
    <string name="main_calday_fr">FR</string>
    <string name="main_calday_sa">SA</string>
    <string name="main_calday_su_description">sunday</string>
    <string name="main_calday_mo_description">monday</string>
    <string name="main_calday_tu_description">tuesday</string>
    <string name="main_calday_we_description">wednesday</string>
    <string name="main_calday_th_description">thursday</string>
    <string name="main_calday_fr_description">friday</string>
    <string name="main_calday_sa_description">saturday</string>
    <string name="details_title">Details</string>
    <string name="list_title">List</string>
    <string name="list_details_title">List with details</string>
    <string name="about_title">About …</string>
    <string name="help_title">Help</string>
    <string name="backup_title">Backup data</string>
    <string name="backup_text">Do you want to backup the current data?\nThis will replace the last backup!</string>
    <string name="backup_ok">OK</string>
    <string name="backup_cancel">Cancel</string>
    <string name="backup_finished">Backup done</string>
    <string name="backup_failed">Backup failed!</string>
    <string name="restore_title">Restore data</string>
    <string name="restore_text">Do you want to restore the last backup?\nThis will replace the current data!</string>
    <string name="restore_ok">OK</string>
    <string name="restore_cancel">Cancel</string>
    <string name="restore_finished">Restore done</string>
    <string name="restore_failed">Restore failed!</string>
    <string name="permissions_needed">To create or restore backups, Periodical needs permission to access file
        storage.
    </string>
    <string name="permissions_needed_ok">OK</string>
    <string name="event_periodstart">Period started</string>
    <string name="event_periodlength">cycle %s days</string>
    <string name="event_ignored">Cycle length ignored</string>
    <string name="event_periodfirst">First entry</string>
    <string name="calendaraction_title">Edit calendar entry</string>
    <string name="calendaraction_add">Mark this day as \"Period\"?</string>
    <string name="calendaraction_remove">Remove the \"Period\" mark for this day?</string>
    <string name="calendaraction_removeperiod">Remove this Period?</string>
    <string name="calendaraction_ok">Yes</string>
    <string name="calendaraction_cancel">No</string>
    <string name="calendaraction_details">Edit details</string>
    <string name="options_title">Preferences</string>
    <string name="pref_periodlength">Default length of period (days)</string>
    <string name="invalid_period_length">The default period length must be between 1 and 14!</string>
    <string name="pref_luteallength">Luteal phase length (days)</string>
    <string name="invalid_luteal_length">The luteal length must be at least 1!</string>
    <string name="pref_startofweek">Start of the week</string>
    <string-array name="list_startofweek">
        <item>Sunday</item>
        <item>Monday</item>
    </string-array>
    <string-array name="values_startofweek">
        <item>0</item>
        <item>1</item>
    </string-array>
    <string name="pref_maximum_cycle_length">Maximum cycle length</string>
    <string name="invalid_maximum_cycle_length">The maximum cycle length must be at least 60!</string>
    <string name="pref_direct_details">Go directly to the details</string>
    <string name="pref_show_cycle">Show day of cycle</string>
    <string name="previous_month">Previous month</string>
    <string name="next_month">Next month</string>
    <string name="label_average_cycle">average cycle</string>
    <string name="label_shortest_cycle">shortest cycle</string>
    <string name="label_longest_cycle">longest cycle</string>
    <string name="label_infertile">infertile</string>
    <string name="label_fertile">fertile</string>
    <string name="label_period_started">period has started</string>
    <string name="label_period">period</string>
    <string name="label_period_predicted">period predicted</string>
    <string name="label_ovulation">ovulation</string>
    <string name="asset_about">en/about.html</string>
    <string name="asset_help">en/help.html</string>
    <string name="label_details_period">Period</string>
    <string name="label_details_yes">Yes</string>
    <string name="label_details_no">No</string>
    <string name="label_details_intensity">Intensity</string>
    <string name="label_details_intensity1">1</string>
</resources>