<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.login.LoginActivity">
    <LinearLayout
            android:orientation="vertical"
            android:background="@color/colorMainGray"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:id="@+id/stepsBottomContainer" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
    >
        <RadioButton
                android:text="@string/skip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/radioButtonLogin"
                android:gravity="center"
                android:layout_gravity="center"
                android:textColor="@android:color/black"
                android:textAllCaps="true"
                android:layout_margin="10dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:fontFamily="@font/open_sans_extrabold"
                android:layout_weight="1"
                android:button="@drawable/radio_bg"/>
        <Button
                android:text="@string/next"
                android:layout_margin="20dp"
                android:background="@drawable/rounded_button"
                android:layout_width="match_parent"
                android:layout_gravity="center"
                android:layout_height="wrap_content"
                android:id="@+id/login_next"/>
    </LinearLayout>
    <TextView
            android:text="@string/welcome"
            android:layout_width="0dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textAllCaps="true"
            android:gravity="center"
            android:alpha="0"
            android:textColor="@android:color/black"
            android:layout_height="wrap_content"
            android:id="@+id/loginTitle" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/email_input"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/email"
            android:ems="10"
            android:id="@+id/email_input" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="8dp" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/stepsBottomContainer" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" style="@style/Widget.AppCompat.AutoCompleteTextView"
            android:textSize="24sp"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/pass"
            android:ems="10"
            android:id="@+id/pass_input" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/email_input" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="8dp" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp" android:textSize="24sp"/>
</androidx.constraintlayout.widget.ConstraintLayout>