<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.more.MoreActivity">

    <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:theme="@style/ToolbarTheme"
            android:minHeight="64dp"
            app:navigationIcon="?attr/homeAsUpIndicator"
            android:id="@+id/toolbarCycleSettings"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">
        <TextView
                android:text="@string/cycle_settings"
                android:autoSizeTextType="uniform"
                android:gravity="center"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
    </androidx.appcompat.widget.Toolbar>

    <TextView xmlns:android="http://schemas.android.com/apk/res/android"
              android:id="@+id/cycleLength"
              android:layout_width="match_parent"
              android:text="@string/length_cycle"
              android:layout_height="wrap_content"
              android:textAppearance="?android:attr/textAppearanceListItemSmall"
              android:gravity="center_vertical"
              android:paddingStart="?android:attr/listPreferredItemPaddingStart"
              android:paddingEnd="?android:attr/listPreferredItemPaddingEnd"
              android:minHeight="?android:attr/listPreferredItemHeightSmall"
              android:paddingLeft="?android:attr/listPreferredItemPaddingLeft"
              android:paddingRight="?android:attr/listPreferredItemPaddingRight" android:layout_marginTop="8dp"
              app:layout_constraintTop_toBottomOf="@+id/toolbarCycleSettings"
              app:layout_constraintEnd_toEndOf="parent"
              app:layout_constraintStart_toStartOf="parent"/>

    <TextView xmlns:android="http://schemas.android.com/apk/res/android"
              android:id="@+id/menstrualLength"
              android:layout_width="match_parent"
              android:text="@string/menstrual_length"
              android:layout_height="wrap_content"
              android:textAppearance="?android:attr/textAppearanceListItemSmall"
              android:gravity="center_vertical"
              android:paddingStart="?android:attr/listPreferredItemPaddingStart"
              android:paddingEnd="?android:attr/listPreferredItemPaddingEnd"
              android:minHeight="?android:attr/listPreferredItemHeightSmall"
              android:paddingLeft="?android:attr/listPreferredItemPaddingLeft"
              android:paddingRight="?android:attr/listPreferredItemPaddingRight"
              app:layout_constraintEnd_toEndOf="parent"
              app:layout_constraintStart_toStartOf="parent"
              app:layout_constraintTop_toBottomOf="@+id/cycleLength"/>
    <TextView
            android:text="@string/cycle_sett_info"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:layout_width="0dp"
            android:gravity="center"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/menstrualLength"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp" android:id="@+id/textView4"/>

    <TextView xmlns:android="http://schemas.android.com/apk/res/android"
              android:id="@+id/pregnant"
              android:layout_width="match_parent"
              android:text="@string/probability_pregnant"
              android:layout_height="wrap_content"
              android:textAppearance="?android:attr/textAppearanceListItemSmall"
              android:gravity="center_vertical"
              android:paddingStart="?android:attr/listPreferredItemPaddingStart"
              android:paddingEnd="?android:attr/listPreferredItemPaddingEnd"
              android:minHeight="?android:attr/listPreferredItemHeightSmall"
              android:paddingLeft="?android:attr/listPreferredItemPaddingLeft"
              android:paddingRight="?android:attr/listPreferredItemPaddingRight"
              app:layout_constraintEnd_toEndOf="parent"
              app:layout_constraintStart_toStartOf="parent"
              android:layout_marginTop="8dp"
              app:layout_constraintTop_toBottomOf="@+id/textView4"/>
    <TextView
            android:text="27 дней"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceListItemSmall"
            android:textColor="@color/colorMainGreen"
            android:id="@+id/counterLengthCycle"
            app:layout_constraintEnd_toEndOf="@+id/cycleLength"
            android:layout_marginEnd="16dp" android:layout_marginRight="16dp"
            app:layout_constraintBottom_toTopOf="@+id/menstrualLength"
            app:layout_constraintTop_toTopOf="@+id/cycleLength"/>
    <TextView
            android:text="5 дней"
            android:textAppearance="?android:attr/textAppearanceListItemSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorMainGreen"
            android:id="@+id/counterMenstrualLength" app:layout_constraintEnd_toEndOf="@+id/menstrualLength"
            android:layout_marginEnd="16dp" android:layout_marginRight="16dp"
            app:layout_constraintTop_toTopOf="@+id/menstrualLength"
            app:layout_constraintBottom_toTopOf="@+id/textView4"/>
    <Switch
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/pregnant_switch" app:layout_constraintEnd_toEndOf="@+id/pregnant"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            app:layout_constraintTop_toTopOf="@+id/pregnant" app:layout_constraintBottom_toBottomOf="@+id/pregnant"/>

</androidx.constraintlayout.widget.ConstraintLayout>