<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto" android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <ImageView
            android:layout_width="match_parent"
            android:layout_height="80dp"
            app:srcCompat="@drawable/search"
            android:id="@+id/imageView" android:layout_marginTop="40dp"/>
    <TextView
            android:layout_width="match_parent"
            android:layout_margin="20dp"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textAllCaps="true"
            android:textColor="@android:color/black"
            android:textAlignment="center"
            android:text="@string/welcome"
            app:fontFamily="@font/open_sans_extrabold"/>
    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <ScrollView
                android:layout_width="match_parent"
                android:fillViewport="true"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:layout_above="@+id/linear_buttons"
                android:layout_alignParentTop="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true">
            <LinearLayout android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:layout_gravity=""
                          android:orientation="vertical">
                <com.google.android.material.radiobutton.MaterialRadioButton
                        android:text="RadioButton"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingLeft="15dip"
                        android:buttonTint="@color/colorMainGreen"
                        android:id="@+id/radioButton1"
                        android:checked="false"
                        android:layout_margin="10dp"
                        android:fontFamily="@font/open_sans"
                        android:textSize="18sp"/>
                <com.google.android.material.radiobutton.MaterialRadioButton
                        android:text="RadioButton"
                        android:layout_margin="10dp"

                        android:paddingLeft="15dip"
                        android:layout_width="match_parent"
                        android:buttonTint="@color/colorMainGreen"
                        android:layout_height="wrap_content"
                        android:id="@+id/radioButton2" android:fontFamily="@font/open_sans" android:textSize="18sp"/>
                <com.google.android.material.radiobutton.MaterialRadioButton
                        android:text="RadioButton"
                        android:layout_margin="10dp"
                        android:paddingLeft="15dip"
                        android:layout_width="match_parent"
                        android:buttonTint="@color/colorMainGreen"
                        android:layout_height="wrap_content"
                        android:id="@+id/radioButton3" android:fontFamily="@font/open_sans" android:textSize="18sp"/>
                <com.google.android.material.radiobutton.MaterialRadioButton
                        android:text="RadioButton"
                        android:layout_margin="10dp"
                        android:paddingLeft="15dip"
                        android:buttonTint="@color/colorMainGreen"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/radioButton4" android:fontFamily="@font/open_sans" android:textSize="18sp"/>
            </LinearLayout>
        </ScrollView>
        <LinearLayout
                android:animateLayoutChanges="true"
                android:orientation="vertical"
                android:background="@color/colorMainGray"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="0dp"
                android:layout_alignParentStart="true"
                android:layout_marginLeft="0dp"
                android:layout_marginStart="0dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginRight="0dp"
                android:layout_marginEnd="0dp"
                android:id="@+id/linear_buttons">
            <TextView
                    android:text="@string/license_comment"
                    android:gravity="center_vertical"
                    android:textAllCaps="false"
                    android:textSize="12sp"
                    android:fontFamily="@font/open_sans"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginLeft="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            <Button
                    android:text="@string/accept_all"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginLeft="20dp"
                    android:background="@drawable/rounded_button"
                    android:layout_width="match_parent"
                    android:layout_gravity="center"
                    android:layout_height="wrap_content"
                    android:id="@+id/button_accept_all"/>
            <Button
                    android:text="@string/next"
                    android:layout_width="match_parent"
                    android:textColor="@color/textGray"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginRight="20dp"
                    android:background="@android:color/transparent"
                    android:layout_marginStart="20dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginBottom="20dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/button_next" android:clickable="false"/>
        </LinearLayout>
    </RelativeLayout>
</LinearLayout>